# src/routes/reviews.routes.ts
@@ -5,12 +5,13 @@ import {
   deleteReviewController,
   deleteReviewImageController,
   getReviewDetailController,
+  getReviewsByProductIdController,
   getReviewsController
 } from '~/controllers/reviews.controllers';
 import { filterReqBodyMiddleware } from '~/middlewares/common.middlewares';
 import { checkProductExist } from '~/middlewares/products.middlewares';
 import { addReviewValidator, checkReviewExistValidator } from '~/middlewares/reviews.middlewares';
-import { accessTokenValidator, verifiedUserValidator } from '~/middlewares/users.middlewares';
+import { accessTokenValidator, adminRoleValidator, verifiedUserValidator } from '~/middlewares/users.middlewares';
 import { AddReviewRequestBody } from '~/models/requests/Review.requests';
 import { wrapRequestHandler } from '~/utils/handler';
 
@@ -27,8 +28,17 @@ reivewsRouter.post(
   wrapRequestHandler(addReviewController)
 );
 
+// Lấy danh sách đánh giá (chỉ dành cho admin)
+reivewsRouter.get(
+  '/',
+  accessTokenValidator,
+  verifiedUserValidator,
+  adminRoleValidator,
+  wrapRequestHandler(getReviewsController)
+);
+
 // Lấy danh sách đánh giá theo từng sản phẩm
-reivewsRouter.get('/product/:product_id', checkProductExist, wrapRequestHandler(getReviewsController));
+reivewsRouter.get('/product/:product_id', checkProductExist, wrapRequestHandler(getReviewsByProductIdController));
 
 // Lấy thông tin chi tiết của một đánh giá
 reivewsRouter.get(
